--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,18 +4,27 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".activity.test.TestSearchActivity">
+        android:theme="@style/AppTheme.NoActionBar"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".activity.MainNavActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
         </activity>
+        <activity android:name=".test.TestFlexboxLayoutActivity">
+
+        </activity>
+        <activity android:name=".test.TestSearchRecyclerActivity" />
+        <activity android:name=".test.TestSearchActivity"></activity>
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -27,21 +36,12 @@
                 android:resource="@xml/provider_filepaths" />
         </provider>
 
-        <activity android:name=".test.test2.Rv2Activity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".test.test2.Rv2Activity" />
         <activity android:name=".activity.TestImageViewTopActivity" />
         <activity
             android:name=".activity.GuideActivity"
-            android:theme="@style/AppTheme.NoActionBar.welcome"></activity>
+            android:theme="@style/AppTheme.NoActionBar.welcome" />
         <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.MainNavActivity">
-
-        </activity>
     </application>
 
 </manifest>
