--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,16 @@ dependencies {
 
     implementation project(path: ':tbase')
 
-    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+//    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+//    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.google.code.gson:gson:2.8.5'
 
-    //    RecyclerView 相关
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.45-androidx'
+//    //    RecyclerView 相关
+//    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
+//    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.45-androidx'
+
+
+    implementation 'com.google.android:flexbox:1.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
 }
