--- a/tbase/build.gradle
+++ b/tbase/build.gradle
@@ -39,31 +39,31 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.belerweb:pinyin4j:2.5.1'
-    implementation 'com.google.android.material:material:1.0.0'
+    api 'com.google.android.material:material:1.0.0'
 
-    implementation 'androidx.multidex:multidex:2.0.1'
-    implementation "com.android.support:design:28.0.0"
+    api 'androidx.multidex:multidex:2.0.1'
+    api "com.android.support:design:28.0.0"
 
     //buggly 用于app版本更新
-    implementation 'com.tencent.bugly:crashreport_upgrade:1.3.6'
+    api 'com.tencent.bugly:crashreport_upgrade:1.3.6'
 
-    implementation 'com.zhihu.android:matisse:0.5.2-beta4'
+    api 'com.zhihu.android:matisse:0.5.2-beta4'
 
-    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    api 'com.github.chrisbanes:PhotoView:2.3.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    implementation 'org.greenrobot:eventbus:3.1.1'
+    api 'org.greenrobot:eventbus:3.1.1'
 
     //    RecyclerView 相关
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.45-androidx'
+    api 'androidx.recyclerview:recyclerview:1.1.0-beta01'
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.45-androidx'
 
 
-    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.0.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    api 'com.squareup.retrofit2:retrofit:2.6.0'
+    api 'com.squareup.retrofit2:converter-gson:2.6.0'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.6.0'
+    api 'com.squareup.okhttp3:logging-interceptor:4.0.0'
+    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
-    implementation 'com.bigkoo:convenientbanner:2.1.5'
+    api 'com.bigkoo:convenientbanner:2.1.5'
+
 }
